tests/snapshots/render/ansi@commonmark-spec-143-fenced_code_blocks.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/143-fenced_code_blocks.md
snapshot_kind: text
---
[32m╭── ruby startline=3 $%@#$ ────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mdef foo(x)[0m                                                                  [32m │[0m
[32m│ [0m[33m  return 3[0m                                                                  [32m │[0m
[32m│ [0m[33mend[0m                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
