tests/snapshots/render/ansi@commonmark-spec-174-html_blocks.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/174-html_blocks.md
snapshot_kind: text
---
  [3m[32m<div>
[0m  [3m[32mfoo
[0m
bar
